Fix course_group details overflow

--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,6 @@ h2{
 
 }
 
-.list-group{
-  max-width: 400px; max-height: 100px
-}
-
 .list-scroll{
   max-width: max-content; max-height: 350px
 }
